fix: Layout issues

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -25,7 +25,8 @@ body {
 /* ========== Form ========== */
 .form-container {
     width: 532px;
-    height: 732px;
+    /* height: 732px; */
+    padding: 47px 60px 0;
     background-color: #FFFFFF;
     text-align: center;
     border-radius: 24px;
@@ -33,7 +34,7 @@ body {
     background-repeat: no-repeat;
     background-position-x: center;
     overflow: hidden;
-    position: relative;
+    /* position: relative; */
 }
 
 .reverse-content {
@@ -44,14 +45,16 @@ body {
 .form-title {
     margin: 0;
     height: 52px;
+    font-size: 32px;
+    line-height: 52px;
+    font-weight: bold;
+    color: #464646;
 }
 
 .form-img {
     width: 412px;
     height: 309px;
-    margin: 47px auto 0 auto;
 }
-
 
 .form-fields {
     display: flex;
@@ -62,35 +65,14 @@ body {
 .form-fields input[type="email"],
 .form-fields input[type="password"] {
     border-style: none;
-    /* padding: 0 5px; */
     direction: ltr;
     text-align: right;
 }
 
-.form-fields input[type="text"],
-.form-fields input[type="number"] {
-    border-style: none;
-    /* padding: 0 5px; */
-    direction: rtl;
-    text-align: right;
-}
-
 .form-fields input[type="email"]:focus,
-.form-fields input[type="password"]:focus,
-.form-fields input[type="text"]:focus,
-.form-fields input[type="number"]:focus {
+.form-fields input[type="password"]:focus {
     border-style: none;
     outline: none;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-
-input[type=number] {
-    -moz-appearance: textfield;
 }
 
 .form-fields input[type="submit"] {
@@ -106,9 +88,8 @@ input[type=number] {
 }
 
 .inputs-container {
-    /* border: 1px solid red; */
     background: linear-gradient(rgba(255, 255, 255, .66), rgba(255, 255, 255, 1));
-    padding-bottom: 100px;
+    padding-bottom: 40px;
     padding-top: 10px;
 }
 
@@ -119,8 +100,14 @@ input[type=number] {
     padding-right: 12px;
 }
 
+.register-link:hover {
+    text-decoration: underline;
+}
+
 .form-container p {
     color: #5A5A5A;
+    line-height: 32px;
+    font-size: 16px;
 }
 
 .input-container {
@@ -134,23 +121,25 @@ input[type=number] {
     width: 312px;
     height: 56px;
     justify-content: right;
+    padding: 8px;
 }
 
 .input-container img {
-    margin: 0 5px 0 5px;
+    margin: 4px 0 4px 8px;
 }
 
-.input-container img[src*="eye-slash.svg"] {
+/* .input-container .hidden-password {
     cursor: pointer;
-}
+    margin: 4px 8px 4px 0;
+} */
 
 .input-container div {
     display: flex;
     flex-direction: column;
     position: relative;
     text-align: right;
-    padding-right: 5px;
-    width: 243px;
+    padding: 4px 0;
+    width: 100%;
     height: 40px;
     justify-content: center;
 }
@@ -159,23 +148,16 @@ input[type=number] {
     position: absolute;
     bottom: 0;
     right: 0;
-    padding-top: 16px;
     background-color: rgba(0, 0, 0, 0);
+    height: 100%;
     width: 100%;
 }
 
-.input-container input:focus ~ label  {
+.input-container input:focus~label {
     position: absolute;
     top: 0;
     right: 0;
     line-height: 16px;
     font-size: 14px;
     color: #5A5A5A;
-}
-
-.back-arrow {
-    position: absolute;
-    padding: 36px;
-    top: 0;
-    right: 0;
 }
