--- a/assets/css/personal-information.css
+++ b/assets/css/personal-information.css
@@ -25,7 +25,7 @@ body {
 /* ========== Form ========== */
 .form-container {
     width: 532px;
-    height: 732px;
+    padding: 47px 60px 0;
     background-color: #FFFFFF;
     text-align: center;
     border-radius: 24px;
@@ -44,12 +44,15 @@ body {
 .form-title {
     margin: 0;
     height: 52px;
+    font-size: 32px;
+    line-height: 52px;
+    font-weight: bold;
+    color: #464646;
 }
 
 .form-img {
     width: 412px;
     height: 309px;
-    margin: 47px auto 0 auto;
 }
 
 
@@ -59,24 +62,13 @@ body {
     align-items: center;
 }
 
-.form-fields input[type="email"],
-.form-fields input[type="password"] {
-    border-style: none;
-    /* padding: 0 5px; */
-    direction: ltr;
-    text-align: right;
-}
-
 .form-fields input[type="text"],
 .form-fields input[type="number"] {
     border-style: none;
-    /* padding: 0 5px; */
     direction: rtl;
     text-align: right;
 }
 
-.form-fields input[type="email"]:focus,
-.form-fields input[type="password"]:focus,
 .form-fields input[type="text"]:focus,
 .form-fields input[type="number"]:focus {
     border-style: none;
@@ -95,7 +87,6 @@ input[type=number] {
 
 .form-fields input[type="submit"] {
     border-radius: 20px;
-    margin-bottom: 16px;
     background-color: #2471EB;
     color: #F4F7FC;
     border-style: none;
@@ -106,21 +97,9 @@ input[type=number] {
 }
 
 .inputs-container {
-    /* border: 1px solid red; */
     background: linear-gradient(rgba(255, 255, 255, .66), rgba(255, 255, 255, 1));
-    padding-bottom: 100px;
+    padding-bottom: 90px;
     padding-top: 10px;
-}
-
-.sign-up-link {
-    text-decoration: none;
-    font-weight: 600;
-    color: #464646;
-    padding-right: 12px;
-}
-
-.form-container p {
-    color: #5A5A5A;
 }
 
 .input-container {
@@ -134,14 +113,11 @@ input[type=number] {
     width: 312px;
     height: 56px;
     justify-content: right;
+    padding: 8px;
 }
 
 .input-container img {
-    margin: 0 5px 0 5px;
-}
-
-.input-container img[src*="eye-slash.svg"] {
-    cursor: pointer;
+    margin: 4px 0 4px 8px;
 }
 
 .input-container div {
@@ -149,8 +125,8 @@ input[type=number] {
     flex-direction: column;
     position: relative;
     text-align: right;
-    padding-right: 5px;
-    width: 243px;
+    padding: 4px 0;
+    width: 100%;
     height: 40px;
     justify-content: center;
 }
@@ -161,6 +137,7 @@ input[type=number] {
     right: 0;
     padding-top: 16px;
     background-color: rgba(0, 0, 0, 0);
+    height: 100%;
     width: 100%;
 }
 
