--- a/assets/css/register.css
+++ b/assets/css/register.css
@@ -25,7 +25,7 @@ body {
 /* ========== Form ========== */
 .form-container {
     width: 532px;
-    height: 732px;
+    padding: 47px 60px 0;
     background-color: #FFFFFF;
     text-align: center;
     border-radius: 24px;
@@ -44,12 +44,15 @@ body {
 .form-title {
     margin: 0;
     height: 52px;
+    font-size: 32px;
+    line-height: 52px;
+    font-weight: bold;
+    color: #464646;
 }
 
 .form-img {
     width: 412px;
     height: 309px;
-    margin: 47px auto 0 auto;
 }
 
 
@@ -67,18 +70,9 @@ body {
     text-align: right;
 }
 
-.form-fields input[type="text"],
-.form-fields input[type="number"] {
-    border-style: none;
-    /* padding: 0 5px; */
-    direction: rtl;
-    text-align: right;
-}
 
 .form-fields input[type="email"]:focus,
-.form-fields input[type="password"]:focus,
-.form-fields input[type="text"]:focus,
-.form-fields input[type="number"]:focus {
+.form-fields input[type="password"]:focus {
     border-style: none;
     outline: none;
 }
@@ -95,7 +89,6 @@ input[type=number] {
 
 .form-fields input[type="submit"] {
     border-radius: 20px;
-    margin-bottom: 16px;
     background-color: #2471EB;
     color: #F4F7FC;
     border-style: none;
@@ -106,21 +99,9 @@ input[type=number] {
 }
 
 .inputs-container {
-    /* border: 1px solid red; */
     background: linear-gradient(rgba(255, 255, 255, .66), rgba(255, 255, 255, 1));
-    padding-bottom: 100px;
+    padding-bottom: 90px;
     padding-top: 10px;
-}
-
-.sign-up-link {
-    text-decoration: none;
-    font-weight: 600;
-    color: #464646;
-    padding-right: 12px;
-}
-
-.form-container p {
-    color: #5A5A5A;
 }
 
 .input-container {
@@ -134,14 +115,16 @@ input[type=number] {
     width: 312px;
     height: 56px;
     justify-content: right;
+    padding: 8px;
 }
 
 .input-container img {
-    margin: 0 5px 0 5px;
+    margin: 4px 0 4px 8px;
 }
 
-.input-container img[src*="eye-slash.svg"] {
+.input-container .hidden-password {
     cursor: pointer;
+    margin: 4px 8px 4px 0;
 }
 
 .input-container div {
@@ -149,8 +132,8 @@ input[type=number] {
     flex-direction: column;
     text-align: right;
     position: relative;
-    padding-right: 5px;
-    width: 243px;
+    padding: 4px 0;
+    width: 100%;
     height: 40px;
     justify-content: center;
 }
@@ -161,6 +144,7 @@ input[type=number] {
     right: 0;
     padding-top: 16px;
     background-color: rgba(0, 0, 0, 0);
+    height: 100%;
     width: 100%;
 }
 
